- switchMap for reseting all filters fix with debounceTime(0)  - scrollbar padding and removed track bckground

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,14 +19,15 @@ body {
   width: $scrollbar-width; /* width of the entire scrollbar */
 }
 
-::-webkit-scrollbar-track {
-  background: $primary-color; /* color of the tracking area */
+/*::-webkit-scrollbar-track {
+  background: $primary-color; !* color of the tracking area *!
+  border-radius: 4px;
+}*/
+
+::-webkit-scrollbar-thumb {
+  background-color: $primary-color-light; /* color of the scroll thumb */
   border-radius: 4px;
 }
-
-/*::-webkit-scrollbar-thumb {
-  background-color: $primary-color-light; !* color of the scroll thumb *!
-}*/
 
 .tg-container {
   max-width: 1275px;
@@ -89,3 +90,6 @@ body {
   }
 }
 
+.scrollable-content {
+  width: calc(100% - #{$xs-padding}) !important;
+}
